--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ionic/angular-toolkit": "^8.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^18.16.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.6.0",
